[project]
name = "ha-nest-protect"
version = "v0.3.12"
readme = "README.md"
requires-python = ">=3.11"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Mick Vleeshouwer", "email" = "mick@imick.nl" }]
urls = { "GitHub" = "https://github.com/iMicknl/ha-nest-protect" }
dependencies = [
    "homeassistant==2023.8.4",
    "pre-commit==3.6.0"
]

[project.optional-dependencies]
test = [
    "pytest==7.3.1",
    "pytest-socket==0.6.0",
    "pytest-homeassistant-custom-component==0.13.53", # homeassistant 2023.8.4
    "pytest-timeout==2.1.0" # pytest-homeassistant-custom-component 0.13.53
]

[tool.setuptools]
py-modules = ["custom_components"]

[tool.flake8]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build"
]
doctests = true
max-line-length = 88
ignore = [
    "E501",
    "W503",
    "E203",
    "D202",
    "W504"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
indent = "    "
not_skip = ["__init__.py"]
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["custom_components.integration_blueprint", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
minversion = "7.3"
timeout = 10
